--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "hubot-redis-brain": "0.0.3",
     "hubot-scripts": "~2.16.2",
     "hubot-slack": "~3.4.2",
-    "hubot": "~2.17.0"
+    "hubot": "~2.17.0",
+    "cheerio": "^0.10.7",
+    "request": "^2.14.0"
   },
   "engines": {
     "node": "0.10.x"
